# edu-ntnu-idatt2101

apps/: CMakeLists.txt  Run.cpp
apps/Task_1/: CMakeLists.txt  Run.cpp
apps/Task_2/: CMakeLists.txt  Oving_2.docx  Recursive_multiplication.cpp
apps/Task_3/: CMakeLists.txt  Oving 3.docx  Test.cpp
apps/Task_4/: CMakeLists.txt  Kompleksitetsanalyse av Josephus problem.docx  Oving_4.cpp
apps/Task_5/: CMakeLists.txt  Oving_5_del_1.cpp  Oving_5_del_2.cpp
apps/Task_6/: CMakeLists.txt  Oving_6_del_1.cpp
apps/Task_7/: BFSResults.java  FlowResult.java  Graph.java  Main.java  Node.java  Queue.java  Wedge.java
apps/Task_8/: CMakeLists.txt  Oving_8.cpp  Readme.txt
apps/Task_9/: CMakeLists.txt  Oving_9.cpp
res/: download_all_missing_resources.sh
res/Task_4/: Correct_syntax_2.txt
res/Task_5_1/: .gitignore  download_names_txt.sh
res/Task_9/: .gitignore  download_map.sh
